# vila

./: pyproject.toml  requirements.txt
src/vila/: predictors.py
src/vila/dataset/preprocessors/: config.py  layout_indicator.py
tests/: test_preprocessor.py
